force-app/main/default/objects/Equipo_Ajuste__c/Equipo_Ajuste__c.object-meta.xml
<CustomObject>
    <label>Equipo Ajuste</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipos Ajuste</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>