force-app/main/default/objects/Equipo_Ajuste__c/fields/Equipos_exterior__c.field-meta.xml
<CustomField>
    <fullName>Equipos_exterior__c</fullName>
    <label>Equipos exterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>