force-app/main/default/objects/Equipo_Ajuste__c/fields/Equipos_interior__c.field-meta.xml
<CustomField>
    <fullName>Equipos_interior__c</fullName>
    <label>Equipos interior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>