force-app/main/default/objects/Equipo_Ajuste__c/fields/Instalacion_interior__c.field-meta.xml
<CustomField>
    <fullName>Instalacion_interior__c</fullName>
    <label>Instalación interior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>