force-app/main/default/objects/Equipo_Ajuste__c/fields/Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto__c</fullName>
    <label>Presupuesto</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Equipos Ajuste</relationshipLabel>
    <relationshipName>Equipos_Ajuste</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>